Fix consent overlapping navbar

--- a/assets/styles/components/_cookie.scss
+++ b/assets/styles/components/_cookie.scss
@@ -1,11 +1,9 @@
 .cookie-consent {
-  @apply .w-full .py-2 .z-50 .flex .items-center .justify-center .bg-developmint-darker .text-developmint-lightest .text-xs;
+  @apply .w-full .py-2 .relative .flex .items-center .justify-center .bg-developmint-darker .text-developmint-lightest .text-xs;
 
   @screen md {
     @apply .text-sm .text-center;
   }
-
-  position: sticky;
 
   &-link {
     @apply .no-underline .text-developmint-light;
